# cogito

./: .gitignore  BACKLOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: DELEGATION_BACKLOG.md  INTEGRATIONS.md  RESEARCH.md
scripts/: bootstrap.sh
src/cogito/: __init__.py  agent_bridge.py  chat.py  cli.py  db.py  embeddings.py  extraction.py  ids.py  local_extractor.py  mcp_server.py  memory.py  osint.py  persona_knowledge.py  personas.py  policy.py  sessions.py  settings.py  tool_manager.py  web_ui.py
tests/: test_agent_bridge.py  test_background_memory.py  test_chat.py  test_completion.py  test_core.py  test_embeddings.py  test_local_extractor.py  test_mcp.py  test_osint.py  test_persona_knowledge.py  test_personas.py  test_sessions.py  test_settings.py  test_tool_manager.py  test_web_ui.py
