[project]
name = "cogito-ergo-sum"
version = "0.1.0"
description = "Local-first personal context kernel for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Network Queen" }]

[project.scripts]
cogito = "cogito.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

